# docs

./: .gitmodules  README.md  actions.md  admin.md  api-architecture.md  external_usages.md  game-mechanics.md  plugins.md  retour.md  san.md  support.md  tatakae_admin.md
admin-client/: .gitignore  pom.xml
admin-client/src/main/java/com/tatakae/admin/: App.java
admin-client/src/test/java/com/tatakae/admin/: AppTest.java
algorithms/: algorithms.md  game.md  generics.md  robot_doc.md  security.md
api/: package-lock.json  package.json
api/src/: app.js  auth.js  db.js
api/src/middlewares/: token.js
api/src/models/: tokens.js  users.js
api/src/routes/: auth.js
api/src/utils/: error.js
architectures/: angular.md  api.md  java.md  nodejs.md  san-compiler.md  san.md
client/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
client/e2e/src/: app.e2e-spec.ts
client/src/: index.html  styles.scss
client/src/app/: api-response.ts  app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  auth.interceptor.ts  auth.service.ts  config.ts
client/src/app/editor/: editor.component.html  editor.component.scss  editor.component.ts
client/src/app/game/: game.component.html
client/src/app/header/: header.component.html  header.component.scss
client/src/app/login/: login.component.html  login.component.scss  login.component.ts
client/src/app/signup/: signup.component.html  signup.component.scss  signup.component.ts
compiler/: CMakeLists.txt
configurations/: docker-compose.yml
configurations/production/: docker-compose.yml
project-documentation/: api_doc.md
scripts/: init.ps1  init.sh  pull_all.ps1  pull_all.sh
technical/: angular-technical.md  api_doc.md  java.md  san-compiler.md  san-playground-api.md
usage/: java_doc.md  san-compiler.md  san-playground-api.md  user_doc.md
